@@ -16,10 +16,7 @@ import org.hibernate.annotations.UpdateTimestamp;
 
 import javax.persistence.*;
 import java.time.LocalDateTime;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 
 @Entity
 @NoArgsConstructor
@@ -47,8 +44,8 @@ public class Test {
 
     @ManyToMany(fetch = FetchType.LAZY)
     @JoinTable(name = "TEST_ASSISTANT",
-            joinColumns = @JoinColumn(name="test_id"),
-            inverseJoinColumns = @JoinColumn(name="account_id"))
+            joinColumns = @JoinColumn(name = "test_id"),
+            inverseJoinColumns = @JoinColumn(name = "account_id"))
     private Set<Account> assistants = new HashSet<>();
 
     @ManyToOne(fetch = FetchType.LAZY)
@@ -102,7 +99,7 @@ public class Test {
 
     public void updateStatus(TestStatus status) {
 
-        if(isEndingTestBeforeEndTime(status)){
+        if (isEndingTestBeforeEndTime(status)) {
             throw new CannotEndTestBeforeEndTimeException();
         }
 
@@ -123,7 +120,7 @@ public class Test {
 
     public void updateAssistants(List<Account> assistants) {
 
-        if(!isValidStatusForUpdatingAssistant()){
+        if (!isValidStatusForUpdatingAssistant()) {
             throw new CannotUpdateTestAssistantException();
         }
 
@@ -137,7 +134,7 @@ public class Test {
 
     public void update(TestType type, LocalDateTime startTime, LocalDateTime endTime, Long updatedBy) {
 
-        if(!isValidStatusForUpdating()){
+        if (!isValidStatusForUpdating()) {
             throw new CannotUpdateTestException();
         }
 
@@ -148,7 +145,7 @@ public class Test {
     }
 
     private boolean isValidStatusForUpdating() {
-        return List.of(TestStatus.CREATE, TestStatus.INVITED).contains(status);
+        return Arrays.asList(TestStatus.CREATE, TestStatus.INVITED).contains(status);
     }
 
     public boolean canUpdateAssistant() {
@@ -160,7 +157,7 @@ public class Test {
     }
 
     public boolean canStartTest() {
-        return List.of(TestStatus.INVITED, TestStatus.IN_PROGRESS).contains(status)
+        return Arrays.asList(TestStatus.INVITED, TestStatus.IN_PROGRESS).contains(status)
                 && LocalDateTime.now().isAfter(startTime.minusHours(2L));
     }
 
